--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         <meta charset='utf-8'> 
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0-rc.1/jquery.mobile-1.3.0-rc.1.min.css" />
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
         <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.3.0-rc.1/jquery.mobile-1.3.0-rc.1.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.rc.2/handlebars.min.js"></script>
+        <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
     </head>
     <body>
         <div data-role="page">
@@ -25,6 +27,7 @@
                         <h3>Ipsum lorum</h3>
                     </li>
                 </ul>
+                <div id="map" style="width: 600px; height: 400px; border: solid;"></div>
             </div>
             <div data-role="footer">
                 <h4>Copyright &copy; 2013</h4>
