--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <h3>Ipsum lorum</h3>
                     </li>
                 </ul>
-                <div id="map" style="width: 600px; height: 400px; border: solid;"></div>
+                <div id="map" style="width: 100%; height: 400px; border: solid;"></div>
             </div>
             <div data-role="footer">
                 <h4>Copyright &copy; 2013</h4>
