resize map widget to fit available content area

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
     </head>
     <body>
-        <div data-role="page">
+        <div id="map-page" data-role="page">
             <div data-role="header">
                 <h1>Palvelut mobiilisti</h1>
             </div>
-            <div data-role="content">
-                <ul data-role="listview">
+            <div data-role="content" style="padding-bottom: 0">
+                <ul data-role="listview" style="margin-bottom: 0">
                     <li><a href="#find-nearest">
                         <h3>Etsi lähin</h3>
                         <p>Etsi sijaintiasi lähimpänä oleva palvelu.</p>
