--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
+        <script src="https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js"></script>
     </head>
     <body>
         <div id="map-page" data-role="page">
