--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         <meta charset='utf-8'> 
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0-rc.1/jquery.mobile-1.3.0-rc.1.min.css" />
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
         <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
@@ -16,7 +17,7 @@
         <script src="https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js"></script>
     </head>
     <body>
-        <div id="map-page" data-role="page">
+        <div id="front-page" data-role="page">
             <div data-role="header">
                 <h1>Palvelut mobiilisti</h1>
             </div>
@@ -26,14 +27,19 @@
                         <h3>Etsi lähin</h3>
                         <p>Etsi sijaintiasi lähimpänä oleva palvelu.</p>
                     </a></li>
-                    <li>
-                        <h3>Ipsum lorum</h3>
-                    </li>
+                    <li><a href="#map-page">
+                        <h3>Tarkastele karttaa</h3>
+                        <p>Etsi reittejä ja kohteita kartalta.</p>
+                    </a></li>
                 </ul>
-                <div id="map" style="width: 100%; height: 400px; border: solid;"></div>
             </div>
             <div data-role="footer">
                 <h4>Copyright &copy; 2013</h4>
+            </div>
+        </div>
+        <div id="map-page" data-role="page">
+            <div data-role="content" style="padding: 0; margin: 0">
+                <div id="map" style="width: 100%; height: 100%; border: 0;"></div>
             </div>
         </div>
         <div id="find-nearest" data-role="page">
