add back buttons for ios webapp use

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
         <div id="find-nearest" data-role="page">
             <div data-role="header">
+                <a href="" data-rel="back">Takaisin</a>
                 <h1>Etsi lähin palvelu</h1>
             </div>
             <div data-role="content">
