--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
             <div data-role="content" style="padding: 0; margin: 0">
                 <div id="map" style="width: 100%; height: 100%; border: 0;"></div>
             </div>
+            <div id="error-popup" data-role="popup" data-rel="dialog" data-transition="pop" data-overlay-theme="a">
+                <div data-role="header">
+                    <h1>Routing failed</h1>
+                </div>
+                <div data-role="content">
+                    <p>Error</p>
+                    <a href="#" data-role="button" data-rel="back">Dismiss</a>
+                </div>
+            </div>
         </div>
         <div id="find-nearest" data-role="page">
             <div data-role="header">
