--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             </div>
         </div>
         <script src="palvelukartta.js"></script>
+        <script src="routing.js"></script>
         <script src="http://code.jquery.com/mobile/1.3.0-rc.1/jquery.mobile-1.3.0-rc.1.min.js"></script>
     </body>
 </html>
