Fix grunt issues

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div data-role="content">
             </div>
         </div>
-        <script src="js/palvelukartta.js"></script>
-        <script src="js/routing.js"></script>
+        <script src="lib/palvelukartta.js"></script>
+        <script src="lib/routing.js"></script>
         <script src="http://code.jquery.com/mobile/1.3.0-rc.1/jquery.mobile-1.3.0-rc.1.min.js"></script>
     </body>
 </html>
