--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
     <body>
         <div id="front-page" data-role="page">
             <div data-role="header">
-                <h1>Palvelut mobiilisti</h1>
+                <h1>CityNavigator Mobile</h1>
+            </div>
+            <div data-role="content">
+                <ul id="navigate-to-input" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Where do you want to go?"></ul>
             </div>
             <div data-role="content" style="padding-bottom: 0">
                 <ul data-role="listview" style="margin-bottom: 0">
                     <li><a href="#find-nearest">
-                        <h3>Etsi lähin</h3>
-                        <p>Etsi sijaintiasi lähimpänä oleva palvelu.</p>
+                        <h3>Find nearest servicen</h3>
+                        <p>Find a service that is nearest to your current location.</p>
                     </a></li>
                     <li><a href="#map-page">
-                        <h3>Tarkastele karttaa</h3>
-                        <p>Etsi reittejä ja kohteita kartalta.</p>
+                        <h3>Browse map</h3>
+                        <p>Calculate routes and browse for points of interest.</p>
                     </a></li>
                 </ul>
             </div>
@@ -60,6 +63,7 @@
         </div>
         <script src="lib/palvelukartta.js"></script>
         <script src="lib/routing.js"></script>
+        <script src="lib/autocomplete.js"></script>
         <script src="http://code.jquery.com/mobile/1.3.0-rc.1/jquery.mobile-1.3.0-rc.1.min.js"></script>
     </body>
 </html>
