--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html> 
     <head>
-        <title>Page Title</title>
+        <title>CityNavigator Mobile</title>
 
         <meta charset='utf-8'> 
-        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0-rc.1/jquery.mobile-1.3.0-rc.1.min.css" />
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
