complete translation into english

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
     <head>
-        <title>CityNavigator Mobile</title>
+        <title>City Navigator</title>
 
         <meta charset='utf-8'> 
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> 
@@ -18,7 +18,7 @@
     <body>
         <div id="front-page" data-role="page">
             <div data-role="header">
-                <h1>CityNavigator Mobile</h1>
+                <h1>City Navigator</h1>
             </div>
             <div data-role="content">
                 <ul id="navigate-to-input" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Where do you want to go?"></ul>
@@ -26,7 +26,7 @@
             <div data-role="content" style="padding-bottom: 0">
                 <ul data-role="listview" style="margin-bottom: 0">
                     <li><a href="#find-nearest">
-                        <h3>Find nearest servicen</h3>
+                        <h3>Find nearest services</h3>
                         <p>Find a service that is nearest to your current location.</p>
                     </a></li>
                     <li><a href="#map-page">
@@ -55,8 +55,8 @@
         </div>
         <div id="find-nearest" data-role="page">
             <div data-role="header">
-                <a href="" data-rel="back">Takaisin</a>
-                <h1>Etsi lähin palvelu</h1>
+                <a href="" data-rel="back">Back</a>
+                <h1>Find nearest services</h1>
             </div>
             <div data-role="content">
             </div>
