Add global config

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <div data-role="content">
             </div>
         </div>
+        <script src="lib/config.js"></script>
         <script src="lib/palvelukartta.js"></script>
         <script src="lib/routing.js"></script>
         <script src="lib/autocomplete.js"></script>
