--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </a></li>
                 </ul>
             </div>
-            <div data-role="footer">
+            <div data-role="footer" data-position="fixed">
                 <h4>Copyright &copy; 2013</h4>
             </div>
         </div>
