Move generated files to static/js, also add some SVG icons

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <div data-role="content">
             </div>
         </div>
-        <script src="lib/config.js"></script>
-        <script src="lib/palvelukartta.js"></script>
-        <script src="lib/routing.js"></script>
-        <script src="lib/autocomplete.js"></script>
+        <script src="/static/js/config.js"></script>
+        <script src="/static/js/palvelukartta.js"></script>
+        <script src="/static/js/routing.js"></script>
+        <script src="/static/js/autocomplete.js"></script>
         <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
     </body>
 </html>
