--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+        <link type="text/css" rel="stylesheet" href="static/css/leaflet.label.css" />
+        <link rel="stylesheet" href="static/css/main.css" /> 
         <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.rc.2/handlebars.min.js"></script>
         <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
+        <script src="https://raw.github.com/Leaflet/Leaflet.label/master/dist/leaflet.label.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
         <script src="https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js"></script>
