--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <script src="static/js/palvelukartta.js"></script>
         <script src="static/js/routing.js"></script>
         <script src="static/js/autocomplete.js"></script>
+        <script src="static/js/poi.js"></script>
         <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
     </body>
 </html>
