add a route overview bar on the bottom of the map

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             <div data-role="content" style="padding: 0; margin: 0">
                 <div id="map" style="width: 100%; height: 100%; border: 0;"></div>
             </div>
+            <div data-role="footer" style="padding: 0; margin: 0; overflow: hidden">
+                <ul id="route-buttons" class="route-graph" style="display: none">
+                </ul>
+            </div>
             <div id="error-popup" data-role="popup" data-rel="dialog" data-transition="pop" data-overlay-theme="a">
                 <div data-role="header">
                     <h1>Routing failed</h1>
