Add preliminary realtime support using Faye

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
         <script src="https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js"></script>
+        <script src="http://dev.hsl.fi:9002/faye/client.js"></script>
     </head>
     <body>
         <div id="front-page" data-role="page">
@@ -73,6 +74,7 @@
         <script src="static/js/routing.js"></script>
         <script src="static/js/autocomplete.js"></script>
         <script src="static/js/poi.js"></script>
+        <script src="static/js/realtime.js"></script>
         <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
     </body>
 </html>
