add checkboxes for walk-only and wheelchair accessible trips

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
                         <h3>Browse map</h3>
                         <p>Calculate routes and browse for points of interest.</p>
                     </a></li>
+                    <li>
+                        <input type="checkbox" name="walk-only" id="walk-only" />
+                        <label for="walk-only">Walk only</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="wheelchair" id="wheelchair" />
+                        <label for="wheelchair">Require accessibility by wheelchair</label>
+                    </li>
                 </ul>
             </div>
             <div data-role="footer" data-position="fixed">
