add a setting to prefer the free bus lines in manchester

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
                         <input type="checkbox" name="wheelchair" id="wheelchair" />
                         <label for="wheelchair">Require accessibility by wheelchair</label>
                     </li>
+                    <li>
+                        <input type="checkbox" name="prefer-free" id="prefer-free" />
+                        <label for="prefer-free">Prefer free routes</label>
+                    </li>
                 </ul>
             </div>
         </div>
