--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
             <div data-role="content">
                 <ul data-role="listview" style="margin-bottom: 0">
                     <li>
+                        <fieldset data-role="controlgroup" data-type="horizontal">
+                            <label><input type="checkbox" name="BUS"><img src="static/images/bus_stop.svg" style="height: 20px;"/></input></label>
+                            <label><input type="checkbox" name="TRAM"><img src="static/images/tram_stop.svg" style="height: 20px;"/></input></label>
+                            <label><input type="checkbox" name="TRAIN"><img src="static/images/train_station2.svg" style="height: 20px;"/></input></label>
+                            <label><input type="checkbox" name="SUBWAY"><img src="static/images/subway.svg" style="height: 20px;"/></input></label>
+                        </fieldset>
+                    </li>
+                    <li>
                         <input type="checkbox" name="wheelchair" id="wheelchair" />
                         <label for="wheelchair">Require accessibility by wheelchair</label>
                     </li>
