Add Leaflet Awesome markers

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
         <link type="text/css" rel="stylesheet" href="static/css/leaflet.label.css" />
         <link rel="stylesheet" href="static/css/main.css" /> 
+        <link rel="stylesheet" href="static/css/leaflet.awesome-markers.css" /> 
         <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.rc.2/handlebars.min.js"></script>
         <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
@@ -101,6 +102,7 @@
             </div>
         </div>
         <script src="static/js/config.js"></script>
+        <script src="static/js/leaflet-awesome-markers.js"></script>
         <script src="static/js/palvelukartta.js"></script>
         <script src="static/js/routing.js"></script>
         <script src="static/js/autocomplete.js"></script>
