Add wheelchair icon

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </li>
                     <li>
                         <input type="checkbox" name="wheelchair" id="wheelchair" />
-                        <label for="wheelchair">Require accessibility by wheelchair</label>
+                        <label for="wheelchair"><img src="static/images/wheelchair.svg" height=20 style="margin-right:16px; margin-left: 16px" />Wheelchair accessible</label>
                     </li>
                     <li>
                         <input type="checkbox" name="prefer-free" id="prefer-free" />
