new service directory pages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div data-role="content" style="padding-bottom: 0">
                 <ul data-role="listview" style="margin-bottom: 0">
-                    <li><a href="#find-nearest">
+                    <li><a href="#service-directory?">
                         <h3>Find nearest services</h3>
                         <p>Find a service that is nearest to your current location.</p>
                     </a></li>
@@ -73,6 +73,26 @@
                 <h1>Find nearest services</h1>
             </div>
             <div data-role="content">
+            </div>
+        </div>
+        <div id="service-directory" data-role="page">
+            <div data-role="header">
+                <a href="" data-rel="back">Back</a>
+                <h1>Find nearest services</h1>
+            </div>
+            <div data-role="content">
+                <ul data-role="list-view">
+                </ul>
+            </div>
+        </div>
+        <div id="service-list" data-role="page">
+            <div data-role="header">
+                <a href="" data-rel="back">Back</a>
+                <h1>Nearest services</h1>
+            </div>
+            <div data-role="content">
+                <ul data-role="list-view">
+                </ul>
             </div>
         </div>
         <div id="settings" data-role="page">
