nicer line drawing; walk only -> walking only

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </a></li>
                     <li>
                         <input type="checkbox" name="walk-only" id="walk-only" />
-                        <label for="walk-only">Walk only</label>
+                        <label for="walk-only">Walking only</label>
                     </li>
                 </ul>
             </div>
