use local leaflet.label.js and moment.min.js instead of raw.github.com

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.rc.2/handlebars.min.js"></script>
         <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
-        <script src="https://raw.github.com/Leaflet/Leaflet.label/master/dist/leaflet.label.js"></script>
+        <script src="static/js/leaflet.label.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
-        <script src="https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js"></script>
+        <script src="static/js/moment.min.js"></script>
         <script src="http://dev.hsl.fi:9002/faye/client.js"></script>
     </head>
     <body>
