display spinner while ajax requests are in progress

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 </ul>
             </div>
         </div>
+        <script src="static/js/init.js"></script>
         <script src="static/js/config.js"></script>
         <script src="static/js/leaflet-awesome-markers.js"></script>
         <script src="static/js/palvelukartta.js"></script>
