add OSM Notes layer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
         <script src="static/js/moment.min.js"></script>
+        <script src="static/js/leaflet-osm-notes.js"></script>
         <script src="http://dev.hsl.fi:9002/faye/client.js"></script>
         <script>
         // Functional testing with TestEm using mocha+chai-framework.
