--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             <div data-role="footer" style="padding: 0; margin: 0; overflow: hidden">
                 <ul id="route-buttons" class="route-graph" style="display: none">
                 </ul>
+                <form id="comment-box" style="display: none; width: 100%; height: 100%; border: 0;">
+                    <textarea style="width: 100%; height: 100%;"></textarea>
+                    <button>Submit</button>
+                </form>
             </div>
             <div id="error-popup" data-role="popup" data-rel="dialog" data-transition="pop" data-overlay-theme="a">
                 <div data-role="header">
