--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
         <script src="static/js/moment.min.js"></script>
         <script src="http://dev.hsl.fi:9002/faye/client.js"></script>
+        <script src="static/js/stacktrace.js"></script>
         <script>
         // Functional testing with TestEm using mocha+chai-framework.
         if (window.location.hash === '#testem') {
