--- a/index.html
+++ b/index.html
@@ -45,12 +45,19 @@
         </script>
     </head>
     <body>
+        <!-- data-role="page" and other data-roles are jQuery mobile specific widget attributes -->
+        <!-- The jQuery mobile will link to pages with data-role="page" based on the id attribute.
+             There are several pages in this index.html document. -->
+        <!-- Front page -->
         <div id="front-page" data-role="page">
             <div data-role="header">
                 <h1>City Navigator</h1>
+                <!-- Settings button.
+                     data-icon="gear" and class="ui-btn-right" are jQuery mobile specific -->
                 <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
             </div>
             <div data-role="content">
+                <!-- "Search box" with the list of results for the location that the user wants to go to. -->
                 <ul id="navigate-to-input" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Where do you want to go?"></ul>
             </div>
             <div data-role="content" style="padding-bottom: 0">
@@ -59,6 +66,7 @@
                         <h3>Find nearest services</h3>
                         <p>Find a service that is nearest to your current location.</p>
                     </a></li>
+                    <!-- pageshow event for the map-page is handled in the routing.coffee -->
                     <li><a href="#map-page">
                         <h3>Browse map</h3>
                         <p>Calculate routes and browse for points of interest.</p>
@@ -73,6 +81,7 @@
                 <h4>Copyright &copy; 2013</h4>
             </div>
         </div>
+        <!-- Map page -->
         <div id="map-page" data-role="page">
             <div data-role="content" style="padding: 0; margin: 0">
                 <div id="map" style="width: 100%; height: 100%; border: 0;"></div>
@@ -95,6 +104,8 @@
                 </div>
             </div>
         </div>
+        <!-- This page is for palvelukartta.coffee but neither is not used anymore as
+              the geocoder API is used nowadays. -->
         <div id="find-nearest" data-role="page">
             <div data-role="header">
                 <a href="" data-rel="back">Back</a>
@@ -103,8 +114,10 @@
             <div data-role="content">
             </div>
         </div>
+        <!-- "Find nearest services" page -->
         <div id="service-directory" data-role="page">
             <div data-role="header">
+                <!-- jQuery mobile back button to go one page back in history -->
                 <a href="" data-rel="back">Back</a>
                 <h1>Find nearest services</h1>
             </div>
@@ -113,6 +126,7 @@
                 </ul>
             </div>
         </div>
+        <!-- "Nearest services" page -->
         <div id="service-list" data-role="page">
             <div data-role="header">
                 <a href="" data-rel="back">Back</a>
@@ -123,6 +137,7 @@
                 </ul>
             </div>
         </div>
+        <!-- Settings page -->
         <div id="settings" data-role="page">
             <div data-role="header">
                 <a href="" data-rel="back">Back</a>
@@ -149,14 +164,27 @@
                 </ul>
             </div>
         </div>
+        <!-- Initialization related code -->
         <script src="static/js/init.js"></script>
+        <!-- Configure the geographical area where the app is to be used in -->
         <script src="static/js/config.js"></script>
+        <!-- "Colorful iconic & retina-proof markers for Leaflet,
+             based on the Font Awesome/Twitter Bootstrap icons" -->
         <script src="static/js/leaflet-awesome-markers.js"></script>
+        <!-- Palvelukartta is not currently used. It utilizes
+             REST API for City of Helsinki Service Map -->
         <script src="static/js/palvelukartta.js"></script>
+        <!-- Handles routing and map drawing -->
         <script src="static/js/routing.js"></script>
+        <!-- Handles autocompletion related tasks for the "Where do you want to go?"
+             filter at the first page -->
         <script src="static/js/autocomplete.js"></script>
+        <!-- Handles POI related task such as finding nearby services and geocoding -->
         <script src="static/js/poi.js"></script>
+        <!-- Component that handles communication with the navigator-server that
+             provides real-time info for the public transportation -->
         <script src="static/js/realtime.js"></script>
+        <!-- Load jQuery Mobile as last because init.js handles the jQuery Mobile mobileinit message. -->
         <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
     </body>
 </html>
