--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         <h3>Find nearest services</h3>
                         <p>Find a service that is nearest to your current location.</p>
                     </a></li>
+                    <!-- pageshow event for the map-page is handled in the routing.coffee -->
                     <li><a href="#map-page">
                         <h3>Browse map</h3>
                         <p>Calculate routes and browse for points of interest.</p>
@@ -165,10 +166,18 @@
         <!-- "Colorful iconic & retina-proof markers for Leaflet,
              based on the Font Awesome/Twitter Bootstrap icons" -->
         <script src="static/js/leaflet-awesome-markers.js"></script>
+        <!-- Palvelukartta is not currently used. It utilizes
+             REST API for City of Helsinki Service Map -->
         <script src="static/js/palvelukartta.js"></script>
+        <!-- Handles routing and map drawing -->
         <script src="static/js/routing.js"></script>
+        <!-- Handles autocompletion related tasks for the "Where do you want to go?"
+             filter at the first page -->
         <script src="static/js/autocomplete.js"></script>
+        <!-- Handles POI related task such as finding nearby services and geocoding -->
         <script src="static/js/poi.js"></script>
+        <!-- Component that handles communication with the navigator-server that
+             provides real-time info for the public transportation -->
         <script src="static/js/realtime.js"></script>
         <!-- Load jQuery Mobile as last because init.js handles the jQuery Mobile mobileinit message. -->
         <script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
