include in the routing requests the transit modes as set in settings

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
             <div data-role="content">
                 <ul data-role="listview" style="margin-bottom: 0">
                     <li>
-                        <fieldset data-role="controlgroup" data-type="horizontal">
+                        <fieldset id="modesettings" data-role="controlgroup" data-type="horizontal">
                             <label><input type="checkbox" name="BUS"><img src="static/images/bus_stop.svg" style="height: 20px;"/></input></label>
                             <label><input type="checkbox" name="TRAM"><img src="static/images/tram_stop.svg" style="height: 20px;"/></input></label>
-                            <label><input type="checkbox" name="TRAIN"><img src="static/images/train_station2.svg" style="height: 20px;"/></input></label>
+                            <label><input type="checkbox" name="RAIL"><img src="static/images/train_station2.svg" style="height: 20px;"/></input></label>
                             <label><input type="checkbox" name="SUBWAY"><img src="static/images/subway.svg" style="height: 20px;"/></input></label>
                         </fieldset>
                     </li>
