--- a/index.html
+++ b/index.html
@@ -73,7 +73,14 @@
                     </a></li>
                     <li>
                         <input type="checkbox" name="walk-only" id="walk-only" />
-                        <label for="walk-only">Walking only</label>
+                        <label for="walk-only">No transit</label>
+                    </li>
+                    <li>
+                        <fieldset id="vehiclesettings" data-role="controlgroup" data-type="horizontal">
+                            <label><input type="radio" name="vehiclesettings" value="WALK" checked="checked"><img src="static/images/walking.svg" style="height: 20px;"/></input></label>
+                            <label><input type="radio" name="vehiclesettings" value="BICYCLE"><img src="static/images/bicycle.svg" style="height: 20px;"/></input></label>
+                            <label><input type="radio" name="vehiclesettings" value="CAR"><img src="static/images/car.svg" style="height: 20px;"/></input></label>
+                        </fieldset>
                     </li>
                 </ul>
             </div>
