re-style header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
     <head>
-        <title>City Navigator</title>
+        <title>Navigator</title>
 
         <meta charset='utf-8'> 
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> 
@@ -50,8 +50,8 @@
              There are several pages in this index.html document. -->
         <!-- Front page -->
         <div id="front-page" data-role="page">
-            <div data-role="header">
-                <h1>City Navigator</h1>
+            <div data-role="header" data-theme="b">
+                <h1>Navigator</h1>
                 <!-- Settings button.
                      data-icon="gear" and class="ui-btn-right" are jQuery mobile specific -->
                 <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
