use local copies of the javascript libraries

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
         <meta charset='utf-8'> 
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> 
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+        <link rel="stylesheet" href="static/css/jquery.mobile-1.3.1.min.css" />
+        <link rel="stylesheet" href="static/css/leaflet.css" />
         <link type="text/css" rel="stylesheet" href="static/css/leaflet.label.css" />
         <link rel="stylesheet" href="static/css/main.css" /> 
         <link rel="stylesheet" href="static/css/leaflet.awesome-markers.css" /> 
-        <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.rc.2/handlebars.min.js"></script>
-        <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
+        <script src="static/js/jquery-1.8.3.min.js"></script>
+        <script src="static/js/handlebars.min.js"></script>
+        <script src="static/js/leaflet.js"></script>
         <script src="static/js/leaflet.label.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
+        <script src="static/js/underscore-min.js"></script>
+        <script src="static/js/backbone-min.js"></script>
         <script src="static/js/moment.min.js"></script>
         <script src="static/js/leaflet-osm-notes.js"></script>
         <script src="http://dev.hsl.fi/faye/client.js"></script>
@@ -191,6 +191,6 @@
              provides real-time info for the public transportation -->
         <script src="static/js/realtime.js"></script>
         <!-- Load jQuery Mobile as last because init.js handles the jQuery Mobile mobileinit message. -->
-        <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+        <script src="static/js/jquery.mobile-1.3.1.min.js"></script>
     </body>
 </html>
