--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
         <!-- Component that handles communication with the navigator-server that
              provides real-time info for the public transportation -->
         <script src="static/js/realtime.js"></script>
+        <script src="static/js/reach.js"></script>
         <!-- Load jQuery Mobile as last because init.js handles the jQuery Mobile mobileinit message. -->
         <script src="static/js/jquery.mobile-1.3.1.min.js"></script>
     </body>
