change "no transit" button to "use transit"

--- a/index.html
+++ b/index.html
@@ -72,11 +72,8 @@
                         <p>Calculate routes and browse for points of interest.</p>
                     </a></li>
                     <li>
-                        <input type="checkbox" name="walk-only" id="walk-only" />
-                        <label for="walk-only">No transit</label>
-                    </li>
-                    <li>
                         <fieldset id="vehiclesettings" data-role="controlgroup" data-type="horizontal">
+                            <label style="margin-right: 0.5em; border-right: solid thin lightgrey;"><input type="checkbox" name="usetransit"><img src="static/images/bus_stop.svg" style="height: 20px;" /></input></label>
                             <label><input type="radio" name="vehiclesettings" value="WALK" checked="checked"><img src="static/images/walking.svg" style="height: 20px;"/></input></label>
                             <label><input type="radio" name="vehiclesettings" value="BICYCLE"><img src="static/images/bicycle.svg" style="height: 20px;"/></input></label>
                             <label><input type="radio" name="vehiclesettings" value="CAR"><img src="static/images/car.svg" style="height: 20px;"/></input></label>
