--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </a></li>
                     <li>
                         <fieldset id="vehiclesettings" data-role="controlgroup" data-type="horizontal">
-                            <label style="margin-right: 0.5em; border-right: solid thin lightgrey;"><input type="checkbox" name="usetransit"><img src="static/images/bus_stop.svg" style="height: 20px;" /></input></label>
+                            <label style="margin-right: 0.5em; border-right: solid thin lightgrey;"><input type="checkbox" name="usetransit" checked="checked"><img src="static/images/bus_stop.svg" style="height: 20px;" /></input></label>
                             <label><input type="radio" name="vehiclesettings" value="WALK" checked="checked"><img src="static/images/walking.svg" style="height: 20px;"/></input></label>
                             <label><input type="radio" name="vehiclesettings" value="BICYCLE"><img src="static/images/bicycle.svg" style="height: 20px;"/></input></label>
                             <label><input type="radio" name="vehiclesettings" value="CAR"><img src="static/images/car.svg" style="height: 20px;"/></input></label>
