--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div data-role="content" style="padding: 0; margin: 0">
                 <div id="map" style="width: 100%; height: 100%; border: 0;"></div>
             </div>
-            <div data-role="footer" style="padding: 0; margin: 0; overflow: hidden">
+            <div data-role="footer" style="padding: 0; margin: 0; border: 0; overflow: visible">
                 <ul id="route-buttons" class="route-graph" style="display: none">
                 </ul>
                 <form id="comment-box" style="display: none; width: 100%; height: 100%; border: 0;">
