--- a/index.html
+++ b/index.html
@@ -90,7 +90,19 @@
                 <div id="map" style="width: 100%; height: 100%; border: 0;"></div>
             </div>
             <div data-role="footer" style="padding: 0; margin: 0; border: 0; overflow: visible">
-                <ul id="route-buttons" class="route-graph" style="display: none">
+                <ul id="routes" class="route-list" style="display: block">
+                    <li>
+                        <ul id="route-buttons-0" class="route-graph" style="display: none">
+                        </ul>
+                    </li>
+                    <li>
+                        <ul id="route-buttons-1" class="route-graph" style="display: none">
+                        </ul>
+                    </li>
+                    <li>
+                        <ul id="route-buttons-2" class="route-graph" style="display: none">
+                        </ul>
+                    </li>
                 </ul>
                 <form id="comment-box" style="display: none; width: 100%; height: 100%; border: 0;">
                     <textarea style="width: 100%; height: 100%;"></textarea>
