move the back button from the map to the header; makes tests pass again

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
         </div>
         <!-- Map page -->
         <div id="map-page" data-role="page">
+            <div data-role="header">
+                <a href="" data-rel="back">Back</a>
+                <h1></h1>
+                <a href="#settings" data-icon="gear" class="ui-btn-right">Settings</a>
+            </div>
             <div data-role="footer" data-position="fixed" style="padding: 0; margin: 0; border: 0; overflow: visible;">
                 <ul id="routes" class="route-list" style="display: block">
                     <li>
