move all scripts to end of html for faster loading

--- a/index.html
+++ b/index.html
@@ -11,39 +11,6 @@
         <link type="text/css" rel="stylesheet" href="static/css/leaflet.label.css" />
         <link rel="stylesheet" href="static/css/main.css" />
         <link rel="stylesheet" href="static/css/leaflet.awesome-markers.css" />
-        <script src="static/js/jquery-1.8.3.min.js"></script>
-        <script src="static/js/handlebars.min.js"></script>
-        <script src="static/js/leaflet.js"></script>
-        <script src="static/js/leaflet.label.js"></script>
-        <script src="static/js/underscore-min.js"></script>
-        <script src="static/js/backbone-min.js"></script>
-        <script src="static/js/moment.min.js"></script>
-        <script src="static/js/leaflet-osm-notes.js"></script>
-        <script src="http://dev.hsl.fi/faye/client.js"></script>
-        <script>
-        // Functional testing with TestEm using mocha+chai-framework.
-        if (window.location.hash === '#testem') {
-            window.testem_mode = true;
-            jQuery(document).ready(function($) {
-                $('#front-page').bind('pageinit', function() {
-                    var loadDependencies, suite = '/tests/test_functional.js';
-                    loadDependencies = function(urls, callback) {
-                        if (urls.length > 0) {
-                           $.getScript(urls.shift(0), function() {
-                               loadDependencies(urls, callback);
-                           });
-                        } else { callback(); }
-                    }
-                    loadDependencies([
-                        '/testem/mocha.js', '/testem/chai.js', '/testem.js'
-                    ], function() {
-                        mocha.setup('bdd');
-                        $.getScript(suite, function() { mocha.run(); });
-                    });
-                });
-            });
-        }
-        </script>
     </head>
     <body>
         <div id="map" style="width: 100%; height: 100%; border: 0;"></div>
@@ -183,6 +150,39 @@
                 </ul>
             </div>
         </div>
+        <script src="static/js/jquery-1.8.3.min.js"></script>
+        <script src="static/js/handlebars.min.js"></script>
+        <script src="static/js/leaflet.js"></script>
+        <script src="static/js/leaflet.label.js"></script>
+        <script src="static/js/underscore-min.js"></script>
+        <script src="static/js/backbone-min.js"></script>
+        <script src="static/js/moment.min.js"></script>
+        <script src="static/js/leaflet-osm-notes.js"></script>
+        <script src="http://dev.hsl.fi:9002/faye/client.js"></script>
+        <script>
+        // Functional testing with TestEm using mocha+chai-framework.
+        if (window.location.hash === '#testem') {
+            window.testem_mode = true;
+            jQuery(document).ready(function($) {
+                $('#front-page').bind('pageinit', function() {
+                    var loadDependencies, suite = '/tests/test_functional.js';
+                    loadDependencies = function(urls, callback) {
+                        if (urls.length > 0) {
+                           $.getScript(urls.shift(0), function() {
+                               loadDependencies(urls, callback);
+                           });
+                        } else { callback(); }
+                    }
+                    loadDependencies([
+                        '/testem/mocha.js', '/testem/chai.js', '/testem.js'
+                    ], function() {
+                        mocha.setup('bdd');
+                        $.getScript(suite, function() { mocha.run(); });
+                    });
+                });
+            });
+        }
+        </script>
         <!-- Initialization related code -->
         <script src="static/js/init.js"></script>
         <!-- Configure the geographical area where the app is to be used in -->
