--- a/index.html
+++ b/index.html
@@ -11,8 +11,39 @@
         <link type="text/css" rel="stylesheet" href="static/css/leaflet.label.css" />
         <link rel="stylesheet" href="static/css/main.css" />
         <link rel="stylesheet" href="static/css/leaflet.awesome-markers.css" />
+        <style>
+            /* Hide all the app pages until jQuery Mobile inits to
+               avoid the Flash of Unstyled Content */
+            [data-role=page] { display: none; }
+
+            .splashscreen {
+                width: 100%;
+                height: 100%;
+                border: 0;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                z-index:1001;
+                background: lightgrey;
+                text-shadow: none;
+                color: black;
+            }
+        </style>
     </head>
     <body>
+        <noscript>Error: No Javascript available in your browser.</noscript>
+        <div id="splashscreen" class="splashscreen" style="display: none"></div>
+        <script>
+            // Show the splash screen with a loading message
+            // Handler to hide the message when the loading stops
+            window.onload = function() {
+                document.getElementById("splashscreen").style.display = 'none';
+            };
+            document.getElementById("splashscreen").innerHTML = 'Loading...';
+            document.getElementById("splashscreen").style.display = 'block';
+        </script>
         <div id="map" style="width: 100%; height: 100%; border: 0;"></div>
         <!-- data-role="page" and other data-roles are jQuery mobile specific widget attributes -->
         <!-- The jQuery mobile will link to pages with data-role="page" based on the id attribute.
