--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
         <script src="static/js/init.js"></script>
         <!-- Configure the geographical area where the app is to be used in -->
         <script src="static/js/config.js"></script>
-        <!-- Providing svg or png icons depending of the support by the web browser. -->
-        <script src="static/js/iconprovider.js"></script>
+        <script src="static/js/local_config.js"></script>
         <!-- "Colorful iconic & retina-proof markers for Leaflet,
              based on the Font Awesome/Twitter Bootstrap icons" -->
         <script src="static/js/leaflet-awesome-markers.js"></script>
