Rewrite config system.
Configuration is rewritten according to Tuukka's vision possibly spiced
up with some of my mistakes. The idea is to have default settings
overridden by area-specific settings in config.coffee. On top of that
one can specify deployment or testing specific settings in
local_config.coffee. A template for the latter is provided.

If local_config.coffee does not exist, the browser can't load
local_config.js and will move on.

--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
         <script src="static/js/init.js"></script>
         <!-- Configure the geographical area where the app is to be used in -->
         <script src="static/js/config.js"></script>
+        <script src="static/js/local_config.js"></script>
         <!-- "Colorful iconic & retina-proof markers for Leaflet,
              based on the Font Awesome/Twitter Bootstrap icons" -->
         <script src="static/js/leaflet-awesome-markers.js"></script>
